--- a/node_project/views/sharks.html
+++ b/node_project/views/sharks.html
@@ -35,7 +35,11 @@
 <br>
 <br>
 B.E  COMPUTER SCIENCE ENGINEERING
-<p>Shri Dharmasthala Manjunatheshwara College of Engineering and Technology, Dharwad. Year of Passing: 2017 CGPA: 7.75</p> 
+<p>Shri Dharmasthala Manjunatheshwara College of Engineering and Technology, Dharwad. Year of Passing: 2017 CGPA: 8.0</p> 
+</br>
+<br>
+M.Tech COMPUTER SCIENCE ENGINEERING
+<p>KLE Technological University, Dharwad. Year of Passing: 2019 CGPA: 8.5</p> 
 </br>
 
                 </div>
