--- a/node_project/views/index.html
+++ b/node_project/views/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h3>Amit Potdar</h3>
-                <p>M.Tech, CSE. KLE Technological University, Hubli. 
+                <p>Software Developer @Datasigns Techologies Pvt Ltd. 
                 </p>
             </div>
             <div class="col-lg-6">
